# openstack-supr-sync

./: .gitignore  README.md  config.yaml  flavor_table.yaml  pyproject.toml  setup.cfg
old_scripts/: suprsync.pl
openstack_supr_sync/: accounting.py  config.py  connection_manager.py  database.py  mail.py  openstack_objects.py  records.py  signal_handler.py  storage_accounting.py  storage_records.py  supr.py  supr_sync.py  utils.py
scripts/: supr_sync_all.py
scripts/old_scripts/: suprsync.conf
service_templates/: accounting.service  records.service  records.timer  sams_report.service  sams_report.timer  storage_accounting.service  storage_accounting.timer  supr_sync.service  supr_sync.timer
