[project]
name = "openstack_supr_sync"
version = "0.1.0"
dependencies = ['requests',
                'pyyaml',
                'simplejson',
                'python-openstackclient', # not sure which
                'openstacksdk',           # one of these
                'psycopg',                # need local database
                'xmlschema']              # sgas help


[tool.setuptools.packages.find]
exclude = ['service_templates*']
